package engine.entity.trajectory;

import engine.entity.Entity;
import engine.scene.LevelScene;

final public class EmptyTrajectory implements Trajectory {
    private static EmptyTrajectory instance = null;
    private EmptyTrajectory(){

    }
    public static EmptyTrajectory getInstance(){
        if(instance == null){
            instance = new EmptyTrajectory();
        }
        return instance;
    }
    @Override
    public Trajectory copyIfNotReusable() {
        return this;
    }

    @Override
    public void update(Entity entity, LevelScene scene) {

    }

}
